--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>D-TEAM</title>
 </head>
 <body>
-  
+<div class="proroditel flex">
+  <div class="block1 flex">
+   <div class="flex flex-column">
+     <ul>
+      <li>Сделаем дизайн, продаваемым.</li>
+      <li>Практичным для клиента.</li>
+      <li>Запоминающимся и эффективным.</li>
+      <li>Быстро и качественно проделаная работа.</li>
+      <li>Универсальный дизайн с адаптацией.</li>
+      <li>Оптимизация сайта.</li>
+      <li>Возможность работать с СММ специалистом</li>
+     </ul>
+     <button>Заказать проект</button>
+     <button>Портфолио</button>
+   </div>
+   <div></div>
+  </div>
+</div>
 </body>
 </html>
