--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>D-TEAM</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="proroditel flex">
-  <div class="block1 flex">
-   <div class="flex flex-column">
-     <ul>
+  <div class="block1 flex just-between width100">
+   <div class="podblock1-1 flex flex-column text-left">
+
+      <!-- <figcaption>Ребрендинг</figcaption> -->
+      <span class="rebrand">Ребрендинг</span>
+     <ul class="family-thin">
+
       <li>Сделаем дизайн, продаваемым.</li>
       <li>Практичным для клиента.</li>
       <li>Запоминающимся и эффективным.</li>
@@ -19,10 +24,12 @@
       <li>Оптимизация сайта.</li>
       <li>Возможность работать с СММ специалистом</li>
      </ul>
-     <button>Заказать проект</button>
-     <button>Портфолио</button>
+      <div class="buttCase flex flex-row">
+     <button class="zakaz"><span class="Plus400"> Заказать проект </span></button>
+     <button class="portfolio"> <span class="plusNeplus"> Портфолио </span></button>
+      </div>
    </div>
-   <div></div>
+   <div class="podblock1-2 flex"> <img src="pizdyuk-za-kompom.svg" alt="" class="pizdyuk"> </div>
   </div>
 </div>
 </body>
